# subscription_app

./: README.md
api/: .env.db.template  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
api/app/: database.py  main.py
api/app/models/: __init__.py  subscription_model.py  user_model.py
api/app/repositories/: __init__.py  subscription_repository.py  user_repository.py
api/app/routers/: __init__.py  subscriptions_router.py  users_router.py
api/app/schemas/: __init__.py  subscription_scheme.py  user_scheme.py
api/app/services/: auth_service.py
api/migrations/: env.py
api/migrations/versions/: 1b16235fbf38_init.py
subscriptions_web_client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
subscriptions_web_client/src/: main.tsx  routeTree.gen.ts
subscriptions_web_client/src/api/: api.ts
subscriptions_web_client/src/layout/: BaseLayout.tsx
subscriptions_web_client/src/models/: subscriptions-models.ts  user-models.ts
subscriptions_web_client/src/pages/: LoginPage.tsx  RegisterPage.tsx  SubscriptionsPage.tsx
subscriptions_web_client/src/routes/: _layout.tsx  login.tsx  register.tsx
subscriptions_web_client/src/routes/_layout/: index.tsx  subscriptions.tsx
subscriptions_web_client/src/services/: AuthService.ts  SubscriptionsService.ts
subscriptions_web_client/src/utilities/: index.ts  is-logged-in.ts
